--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "ant-design-vue": "^4.1.2",
     "antd": "^5.15.3",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
