--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "db:serve": "json-server --watch db.json --port=3001",
     "serve": "vue-cli-service serve --port 3000",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -10,7 +11,9 @@
   "dependencies": {
     "ant-design-vue": "^4.1.2",
     "antd": "^5.15.3",
+    "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "json-server": "^1.0.0-alpha.23",
     "vue": "^3.2.13",
     "vue-router": "^4.3.0"
   },
